[package]
name = "rec_rsys"
version = "0.1.0"
edition = "2021"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = [
    "recommender system",
    "machine learning",
    "AI",
    "ML",
    "statistics",
    "prabability",
]
description = "Library for different maths functions related to recsys and ML"
documentation = "https://docs.rs/"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src/**",
]
keywords = ["macros", "syn"]
repository = "https://github.com/lucas-montes/rec_rsys"

[features]
default = []
full = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.7.0"
