[package]
name = "rec_rsys"
version = "0.1.1"
edition = "2021"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = ["algorithms", "mathematics"]
description = "Library for different maths functions related to recsys and ML"
documentation = "https://docs.rs/rec_rsys/"
include = ["/Cargo.toml", "/README.md", "/src/**", "/docs/**"]
keywords = ["recommender-system", "machine-learning"]
repository = "https://github.com/lucas-montes/rec_rsys"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.69"

[features]
default = []
full = []

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "cool_benchmarks"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]
