[package]
name = "rec_rsys"
version = "1.0.0"
edition = "2021"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
categories = ["algorithms", "mathematics"]
description = "Library for different maths functions related to recsys and ML"
documentation = "https://docs.rs/rec_rsys/"
include = ["/Cargo.toml", "/README.md", "/src/**", "/docs/**"]
keywords = ["recommender-system", "machine-learning"]
repository = "https://github.com/lucas-montes/rec_rsys"
license = "MIT OR Apache-2.0"
readme = "README.md"

[features]
full = []
async = []
default = ["benchmarks"]
benchmarks = ["criterion", "pprof"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
rand = "0.8.4"
rand_distr = "0.4.2"
rayon = "1.7.0"
criterion = { version = "0.4", features = ["html_reports"] , optional = true}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
async-trait = "0.1.71"

[target.'cfg(not(windows))'.dependencies]
pprof = { version = "0.11.0", features = ["flamegraph", "criterion"], optional = true}

[[bench]]
name = "cosine"
harness = false
path = "benches/cosine.rs"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex.html" ]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

